--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <div class="centerMainContent">
                 <div>
                     <img src="./assets/icons/Bitmap.svg" alt="">
-                    <h4>PROJECT AND CONSTRUCTION MANAGEMENT</h4>
+                    <h4 style="color: #48555B;">PROJECT AND CONSTRUCTION MANAGEMENT</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
                         ut laoreet dolore magna aliquam erat.</p>
                 </div>
                 <div>
                     <img src="./assets/icons/Bitmap (1).svg" alt="">
-                    <h4>STRUCTURE AUDIT AND MAINTENANCE</h4>
+                    <h4 style="color: #48555B;">STRUCTURE AUDIT AND MAINTENANCE</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
                         ut laoreet dolore magna aliquam erat.</p>
                 </div>
                 <div>
                     <img src="./assets/icons/Bitmap (2).svg" alt="">
-                    <h4>FACTORY CONSTRUCTION AND MODELING</h4>
+                    <h4 style="color: #48555B;">FACTORY CONSTRUCTION AND MODELING</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
                         ut laoreet dolore magna aliquam erat.</p>
                 </div>
